# MyMemo

./: .gitignore  FACE_RECOGNITION_BUG.md  FRONTEND_README.md  NEXT_STEPS.md  README.md  docker-compose.prod.yml  docker-compose.yml  test_backend.py  test_upload.py
Proyecto_md/: Architecture.md  DESIGN_SYSTEM.md  Final_Architecture.md  Project_Tracker.md  session_temp.md  vision_borad.md
backend/: .env.example  Dockerfile  init_db.py  main.py  pyproject.toml  test_face.py  test_neighbors.py  test_postgis_search.py  test_s3.py  test_unit_face.py
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/api/v1/endpoints/: admin.py  auth.py  connections.py  memories.py  people.py  search.py  usage.py
backend/core/: config.py  database.py  deps.py  limiter.py  security.py
backend/lambda/: README.md  __init__.py  face_handler.py  nlp_handler.py
backend/models/: database.py  schemas.py
backend/services/: face_service.py  nlp_service.py  storage_service.py
backend/tasks/: __init__.py  celery_app.py  face_recognition.py  nlp_extraction.py
backend/tests/: check_people.py  check_results.py  check_status.py  simple_test.py  test_celery.py  test_create_memory.py  test_memory_upload.py  test_refactor.py
backend/tests/Texto/: prueba.txt
backend/tests/Ubicacion/: ubi.txt
dashboard/: .env.example  README.md  app.py  pyproject.toml  requirements.txt
deployment/: .env.prod.example  DEPLOY_GUIDE.md  deploy.sh  init-extensions-temp.sql  init-extensions.sql  install-pgvector.sh  migrate_to_auth.sql  nginx.prod.conf
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: FaceTagModal.jsx  LocationPickerModal.jsx  ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: CreateMemory.jsx  EditMemory.jsx  Home.jsx  Login.jsx  MemoryDetail.jsx  People.jsx  Register.jsx  Timeline.jsx  (+1 more)
(+12 files in other folders)
