[project]
name = "mymemo-dashboard"
version = "0.1.0"
description = "MyMemo Admin Dashboard"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
